--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Ayo",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prisma": "^4.13.0"
   }
 }
